# onecli

./: .gitignore  CHANGELOG.md  package.json  turbo.json
apps/gateway/: Cargo.toml  build.rs
apps/gateway/src/: approval.rs  apps.rs  budget.rs  cache.rs  connect.rs  db.rs  default_interceptions.rs  edition.rs  gateway.rs  main.rs  org_routes.rs  secret_inject.rs  telemetry.rs  telemetry_core.rs  util.rs
apps/gateway/src/cloud/: budget.rs
apps/gateway/src/ee/: org_routes.rs
apps/gateway/src/ee/onprem/: auth.rs
apps/gateway/src/gateway/: finalizers.rs  forward.rs  hooks.rs  mitm.rs  response.rs  websocket.rs
apps/gateway/tests/: integration.rs
apps/web/: next.config.js
apps/web/src/app/(dashboard)/: layout.tsx
apps/web/src/app/(dashboard)/_components/: dashboard-header.tsx
apps/web/src/app/(dashboard)/connections/_components/: app-categories.ts  app-config-form.tsx  apps-tab.tsx  secret-card.tsx  secret-dialog.tsx  secrets-content.tsx
apps/web/src/app/(dashboard)/overview/_components/: api-key-card.tsx
apps/web/src/app/api/skill/gateway/: route.ts
apps/web/src/lib/: env.ts
apps/web/src/lib/actions/: api-key.ts  secrets.ts
apps/web/src/lib/api/: app-config.ts  session-provider.ts
apps/web/src/lib/apps/: cloudflare.ts  google-search-console.ts  registry.ts
apps/web/src/lib/apps/app-permissions/: aws.ts  cloudflare.ts  datadog.ts  index.ts  notion.ts
apps/web/src/lib/auth/: types.ts
apps/web/src/lib/skills/: gateway-skill.ts
docs/: issues-google-service-account.md  review-google-sa-round3.md
